--- a/mediawiki/values.yaml
+++ b/mediawiki/values.yaml
@@ -1,11 +1,44 @@
-imageTag: 1.26.3-r0
+## Bitnami MediaWiki image version
+## ref: https://hub.docker.com/r/bitnami/mediawiki/tags/
+##
+imageTag: 1.27.0-r0
 
-mediawikiUser: user
-mediawikiPassword: bitnami1
-mediawikiEmail: user@example.com
-mediawikiName: Bitnami MediaWiki
-smtpHost:
-smtpHostID:
-smtpPort:
-smtpUser:
-smtpPassword:
+## Specify a imagePullPolicy
+## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+##
+# imagePullPolicy:
+
+## Admin user credentials
+## ref: https://github.com/bitnami/bitnami-docker-mediawiki#environment-variables
+##
+# mediawikiUser: user
+# mediawikiPassword: bitnami1
+
+## Admin user email
+## ref: https://github.com/bitnami/bitnami-docker-mediawiki#environment-variables
+##
+# mediawikiEmail: user@example.com
+
+## Wiki Title
+## ref: https://github.com/bitnami/bitnami-docker-mediawiki#environment-variables
+##
+# mediawikiName: Bitnami MediaWiki
+
+## SMTP mail delivery configuration
+## ref: https://github.com/bitnami/bitnami-docker-mediawiki#smtp-configuration
+##
+# smtpHost:
+# smtpPort: 25
+# smtpHostID:
+# smtpUser:
+# smtpPassword:
+
+##
+## MariaDB chart configuration
+##
+# mariadb:
+  ## Specify password for root user
+  ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#setting-the-root-password-on-first-run
+  ##
+  # mariadbRootPassword:
