--- a/testlink/charts/mariadb/templates/secrets.yaml
+++ b/testlink/charts/mariadb/templates/secrets.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ printf "%s-%s" .Release.Name "mariadb" | trunc 24 }}
+  name: {{ template "fullname" . }}
   labels:
-    provider: mariadb
-    release: {{ .Release.Name }}
-    heritage: bitnami
+    app: {{ template "fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
   mariadb-root-password: {{ default "" .Values.mariadbRootPassword | b64enc | quote }}
