--- a/testlink/values.yaml
+++ b/testlink/values.yaml
@@ -1,12 +1,45 @@
+## Bitnami TestLink image version
+## ref: https://hub.docker.com/r/bitnami/testlink/tags/
+##
 imageTag: 1.9.14-r0
-testlinkUsername: user
-testlinkPassword: bitnami
-testlinkEmail: user@example.com
-testlinkLanguage: en_US
-testlinkSmtpEnable:
-testlinkSmtpConnectionMode:
-smtpHost:
-smtpUser:
-smtpPassword:
-smtpPort:
-smtpProtocol:
+
+## Specify a imagePullPolicy
+## Defaults to 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
+## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
+##
+# imagePullPolicy:
+
+## Admin user credentials
+## ref: https://github.com/bitnami/bitnami-docker-testlink#environment-variables
+##
+# testlinkUsername: user
+# testlinkPassword: bitnami
+
+## Admin user email
+## ref: https://github.com/bitnami/bitnami-docker-testlink#environment-variables
+##
+# testlinkEmail: user@example.com
+
+## Default UI language
+## ref: https://github.com/bitnami/bitnami-docker-testlink#environment-variables
+##
+# testlinkLanguage: en_US
+
+## SMTP mail delivery configuration
+## ref: https://github.com/bitnami/bitnami-docker-testlink#smtp-configuration
+##
+# smtpEnable:
+# smtpConnectionMode:
+# smtpHost:
+# smtpPort: 25
+# smtpUser:
+# smtpPassword:
+
+##
+## MariaDB chart configuration
+##
+# mariadb:
+  ## Specify password for root user
+  ## ref: https://github.com/bitnami/bitnami-docker-mariadb/blob/master/README.md#setting-the-root-password-on-first-run
+  ##
+  # mariadbRootPassword:
