--- a/odoo/templates/secrets.yaml
+++ b/odoo/templates/secrets.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ printf "%s-%s" .Release.Name "odoo" | trunc 24 }}
+  name: {{ template "fullname" . }}
   labels:
-    provider: odoo
-    release: {{ .Release.Name }}
-    heritage: bitnami
+    app: {{ template "fullname" . }}
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
   odoo-password: {{ default "" .Values.odooPassword | b64enc | quote }}
