--- a/phabricator/tpl/values.toml
+++ b/phabricator/tpl/values.toml
@@ -4,6 +4,7 @@ phabricatorEmail = "user@example.com"
 phabricatorFirstName = "First Name"
 phabricatorLastName = "Last Name"
 phabricatorHost = ""
+phabricatorHostIP = ""
 smtpUser = ""
 smtpPassword = ""
 smtpHost = ""
