--- a/wordpress/templates/deployment.yaml
+++ b/wordpress/templates/deployment.yaml
@@ -1,69 +1,66 @@
-#helm:generate helmc tpl -d tpl/values.toml -o manifests/wordpress-rc.yaml $HELM_GENERATE_FILE
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
-  name: wordpress
+  name: {{ template "fullname" . }}
   labels:
-    app: wordpress
-    provider: wordpress-server
-    heritage: bitnami
+    app: {{ template "fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 spec:
   replicas: 1
-  selector:
-    app: wordpress
-    provider: wordpress-server
-    version: 4.6-r0
   template:
     metadata:
       labels:
-        app: wordpress
-        provider: wordpress-server
-        version: 4.6-r0
-        heritage: bitnami
+        app: {{ template "fullname" . }}
+        chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+        release: "{{ .Release.Name }}"
+        heritage: "{{ .Release.Service }}"
     spec:
       containers:
-      - name: wordpress
-        image: bitnami/wordpress:4.6-r0
+      - name: {{ template "fullname" . }}
+        image: "bitnami/wordpress:{{ .Values.imageTag }}"
+        imagePullPolicy: {{ template "imagePullPolicy" . }}
         env:
         - name: MARIADB_HOST
-          value: "mariadb"
+          value: {{ template "mariadb.fullname" . }}
         - name: MARIADB_PORT
           value: "3306"
         - name: MARIADB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: mariadb
+              name: {{ template "mariadb.fullname" . }}
               key: mariadb-root-password
         - name: WORDPRESS_USERNAME
-          value: {{ .wordpressUsername | quote }}
+          value: {{ default "" .Values.wordpressUsername | quote }}
         - name: WORDPRESS_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: wordpress
+              name: {{ template "fullname" . }}
               key: wordpress-password
         - name: WORDPRESS_EMAIL
-          value: {{ .wordpressEmail | quote }}
+          value: {{ default "" .Values.wordpressEmail | quote }}
         - name: WORDPRESS_FIRSTNAME
-          value: {{ .wordpressFirstName | quote }}
+          value: {{ default "" .Values.wordpressFirstName | quote }}
         - name: WORDPRESS_LASTNAME
-          value: {{ .wordpressLastName | quote }}
+          value: {{ default "" .Values.wordpressLastName | quote }}
         - name: WORDPRESS_BLOGNAME
-          value: {{ .wordpressBlogName | quote }}
+          value: {{ default "" .Values.wordpressBlogName | quote }}
         - name: SMTP_HOST
-          value: {{ .smtpHost | quote }}
+          value: {{ default "" .Values.smtpHost | quote }}
         - name: SMTP_PORT
-          value: {{ .smtpPort | quote }}
+          value: {{ default "" .Values.smtpPort | quote }}
         - name: SMTP_USER
-          value: {{ .smtpUser | quote }}
+          value: {{ default "" .Values.smtpUser | quote }}
         - name: SMTP_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: wordpress
+              name: {{ template "fullname" . }}
               key: smtp-password
         - name: SMTP_USERNAME
-          value: {{ .smtpUsername | quote }}
+          value: {{ default "" .Values.smtpUsername | quote }}
         - name: SMTP_PROTOCOL
-          value: {{ .smtpProtocol | quote }}
+          value: {{ default "" .Values.smtpProtocol | quote }}
         ports:
         - name: http
           containerPort: 80
