--- a/mariadb-cluster/templates/deployment-slave.yaml
+++ b/mariadb-cluster/templates/deployment-slave.yaml
@@ -1,49 +1,47 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: extensions/v1beta1
+kind: Deployment
 metadata:
-  name: {{ printf "%s-%s" .Release.Name "slave" | trunc 24 }}
+  name: {{ template "slave.fullname" . }}
   labels:
-    provider: mariadb
     mode: slave
-    release: {{ .Release.Name }}
-    heritage: bitnami
+    app: {{ template "slave.fullname" . }}
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
 spec:
-  replicas: 3
-  selector:
-    provider: mariadb
-    mode: slave
-    release: {{ .Release.Name }}
-    version: {{ .Values.imageTag }}
+  replicas: {{ default "1" .Values.replicasCount }}
   template:
     metadata:
       labels:
-        provider: mariadb
         mode: slave
-        release: {{ .Release.Name }}
-        version: {{ .Values.imageTag }}
+        app: {{ template "slave.fullname" . }}
+        chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+        release: "{{ .Release.Name }}"
+        heritage: "{{ .Release.Service }}"
     spec:
       containers:
-      - name: mariadb
-        image: bitnami/mariadb:{{ .Values.imageTag }}
+      - name: {{ template "slave.fullname" . }}
+        image: "bitnami/mariadb:{{ .Values.imageTag }}"
+        imagePullPolicy: {{ template "imagePullPolicy" . }}
         env:
         - name: MARIADB_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ printf "%s-%s" .Release.Name "mariadb" | trunc 24 }}
+              name: {{ template "fullname" . }}
               key: mariadb-root-password
         - name: MARIADB_USER
           value: {{ default "" .Values.mariadbUser | quote }}
         - name: MARIADB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ printf "%s-%s" .Release.Name "mariadb" | trunc 24 }}
+              name: {{ template "fullname" . }}
               key: mariadb-password
         - name: MARIADB_DATABASE
           value: {{ default "" .Values.mariadbDatabase | quote }}
         - name: MARIADB_REPLICATION_MODE
           value: "slave"
         - name: MARIADB_MASTER_HOST
-          value: {{ printf "%s-%s" .Release.Name "master" | trunc 24 | quote }}
+          value: {{ template "master.fullname" . }}
         - name: MARIADB_MASTER_PORT
           value: "3306"
         - name: MARIADB_MASTER_USER
@@ -51,14 +49,14 @@ spec:
         - name: MARIADB_MASTER_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ printf "%s-%s" .Release.Name "mariadb" | trunc 24 }}
+              name: {{ template "fullname" . }}
               key: mariadb-password
         - name: MARIADB_REPLICATION_USER
           value: {{ default "" .Values.mariadbReplicationUser | quote }}
         - name: MARIADB_REPLICATION_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ printf "%s-%s" .Release.Name "mariadb" | trunc 24 }}
+              name: {{ template "fullname" . }}
               key: mariadb-replication-password
         ports:
         - name: mysql
